--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,7 +1,7 @@
-//akka {
-//  loggers = ["akka.event.slf4j.Slf4jLogger"]
-//  loglevel = "DEBUG"
-//}
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "DEBUG"
+}
 
 mongo-async-driver {
   akka {
