--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,40 @@
 version: "3.1"
 
 services:
+  gateway:
+    image: "choffmeister/nginx-certbot"
+    ports:
+      - "80:80"
+      - "443:443"
+    environment:
+      - "CERTBOT_DOMAIN=mybench.xyz"
+      - "CERTBOT_EMAIL=mail@jtiemann.de"
+    volumes:
+      - "./nginx.conf:/etc/nginx/conf.d/athleets.conf:ro"
+      - "letsencrypt:/etc/letsencrypt"
+    depends_on:
+      - "server1"
 
-  mongodb:
+  server1:
+    image: "kddc/athleets:server-latest"
+    ports:
+      - "8080:8080"
+    environment:
+      - "MONGODB_URI=mongodb://mongo:27017"
+      - "MONGODB_DATABASE_NAME=mybench"
+    depends_on:
+      - "mongo"
+
+  mongo:
     image: "mongo:3.6"
     ports:
       - "27017:27017"
-    restart: "always"
-    command: --smallfiles
-#    environment:
-#      MONGO_INITDB_ROOT_USERNAME: "root"
-#      MONGO_INITDB_ROOT_PASSWORD: "root"
+    volumes:
+      - "mongo:/data/db"
+    restart: "unless-stopped"
+
+volumes:
+  mongo:
+    driver: "local"
+  letsencrypt:
+    driver: "local"
