add api prefix, www to no www redirect

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,9 @@
 server {
+  server_name www.mybench.xyz;
+  return 301 $scheme://mybench.xyz$request_uri;
+}
+
+server {
   listen              443 ssl;
   server_name         mybench.xyz;
   ssl_certificate     /etc/letsencrypt/live/mybench.xyz/fullchain.pem;
