--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,9 @@
 server {
+  listen 80;
+  listen 443 ssl;
   server_name www.mybench.xyz;
+  ssl_certificate     /etc/letsencrypt/live/mybench.xyz/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/mybench.xyz/privkey.pem;
   return 301 $scheme://mybench.xyz$request_uri;
 }
 
